src/main/java/de/dwslab/riskmanagement/abduction/parser/ModelParser.java
// $ANTLR 3.4 com\\googlecode\\rockit\\parser\\Model.g 2014-01-22 14:19:39

package de.dwslab.riskmanagement.abduction.parser;

import java.util.ArrayList;
import java.util.HashSet;
import java.util.TreeSet;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;

import de.dwslab.riskmanagement.abduction.exceptions.ParseException;
import de.dwslab.riskmanagement.abduction.model.HerbrandUniverse;
import de.dwslab.riskmanagement.abduction.model.Model;
import de.dwslab.riskmanagement.abduction.model.expressions.IfExpression;
import de.dwslab.riskmanagement.abduction.model.expressions.PredicateExpression;
import de.dwslab.riskmanagement.abduction.model.formulas.FormulaCardinality;
import de.dwslab.riskmanagement.abduction.model.formulas.FormulaHard;
import de.dwslab.riskmanagement.abduction.model.formulas.FormulaSoft;
import de.dwslab.riskmanagement.abduction.model.predicates.Predicate;
import de.dwslab.riskmanagement.abduction.model.predicates.PredicateAbstract;
import de.dwslab.riskmanagement.abduction.model.predicates.PredicateDouble;
import de.dwslab.riskmanagement.abduction.model.types.Type;
import de.dwslab.riskmanagement.abduction.model.variables.VariableAbstract;
import de.dwslab.riskmanagement.abduction.model.variables.VariableDouble;
import de.dwslab.riskmanagement.abduction.model.variables.VariableString;
import de.dwslab.riskmanagement.abduction.model.variables.VariableType;

@SuppressWarnings({ "all", "warnings", "unchecked" })
public class ModelParser extends Parser {

    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMA", "DOUBLEVAR", "FLOAT", "HASH", "ID",
        "ML_COMMENT", "NEWLINE", "NOT", "SL_COMMENT", "STAR", "STRING", "WS", "'('", "')'",
        "'.'", "':'", "'<='", "'>='", "'v'", "'|'"
    };

    public static final int EOF = -1;
    public static final int T__16 = 16;
    public static final int T__17 = 17;
    public static final int T__18 = 18;
    public static final int T__19 = 19;
    public static final int T__20 = 20;
    public static final int T__21 = 21;
    public static final int T__22 = 22;
    public static final int T__23 = 23;
    public static final int COMMA = 4;
    public static final int DOUBLEVAR = 5;
    public static final int FLOAT = 6;
    public static final int HASH = 7;
    public static final int ID = 8;
    public static final int ML_COMMENT = 9;
    public static final int NEWLINE = 10;
    public static final int NOT = 11;
    public static final int SL_COMMENT = 12;
    public static final int STAR = 13;
    public static final int STRING = 14;
    public static final int WS = 15;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    public ModelParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public ModelParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    @Override
    public String[] getTokenNames() {
        return ModelParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "com\\googlecode\\rockit\\parser\\Model.g";
    }

    /** Map variable name to Integer object holding value */
    TreeSet<Type> types = new TreeSet<Type>();
    TreeSet<PredicateAbstract> predicates = new TreeSet<PredicateAbstract>();
    int formulaId = 1;
    HerbrandUniverse u = HerbrandUniverse.getInstance();

    // $ANTLR start "model"
    // com\\googlecode\\rockit\\parser\\Model.g:37:1: model returns [Model model = new Model()] : (
    // ( ML_COMMENT ) | ( SL_COMMENT ) | ( NEWLINE ) | (pre= predicateDefinition ) | (sf=
    // softFormulaDefinition ) | (hf= hardFormulaDefinition ) | (cf= cardinalityFormulaDefiniton )
    // )+ ;
    public final Model model() throws RecognitionException, ParseException {
        Model model = new Model();

        PredicateAbstract pre = null;

        FormulaSoft sf = null;

        FormulaHard hf = null;

        FormulaCardinality cf = null;

        try {
            // com\\googlecode\\rockit\\parser\\Model.g:37:64: ( ( ( ML_COMMENT ) | ( SL_COMMENT ) |
            // ( NEWLINE ) | (pre= predicateDefinition ) | (sf= softFormulaDefinition ) | (hf=
            // hardFormulaDefinition ) | (cf= cardinalityFormulaDefiniton ) )+ )
            // com\\googlecode\\rockit\\parser\\Model.g:38:3: ( ( ML_COMMENT ) | ( SL_COMMENT ) | (
            // NEWLINE ) | (pre= predicateDefinition ) | (sf= softFormulaDefinition ) | (hf=
            // hardFormulaDefinition ) | (cf= cardinalityFormulaDefiniton ) )+
            {
                // com\\googlecode\\rockit\\parser\\Model.g:38:3: ( ( ML_COMMENT ) | ( SL_COMMENT )
                // | ( NEWLINE ) | (pre= predicateDefinition ) | (sf= softFormulaDefinition ) | (hf=
                // hardFormulaDefinition ) | (cf= cardinalityFormulaDefiniton ) )+
                int cnt1 = 0;
                loop1: do {
                    int alt1 = 8;
                    alt1 = dfa1.predict(input);
                    switch (alt1) {
                    case 1:
                        // com\\googlecode\\rockit\\parser\\Model.g:39:4: ( ML_COMMENT )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:39:4: ( ML_COMMENT )
                        // com\\googlecode\\rockit\\parser\\Model.g:39:5: ML_COMMENT
                        {
                            match(input, ML_COMMENT, FOLLOW_ML_COMMENT_in_model53);

                        }

                    }
                    break;
                    case 2:
                        // com\\googlecode\\rockit\\parser\\Model.g:39:19: ( SL_COMMENT )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:39:19: ( SL_COMMENT )
                        // com\\googlecode\\rockit\\parser\\Model.g:39:20: SL_COMMENT
                        {
                            match(input, SL_COMMENT, FOLLOW_SL_COMMENT_in_model59);

                        }

                    }
                    break;
                    case 3:
                        // com\\googlecode\\rockit\\parser\\Model.g:39:34: ( NEWLINE )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:39:34: ( NEWLINE )
                        // com\\googlecode\\rockit\\parser\\Model.g:39:35: NEWLINE
                        {
                            match(input, NEWLINE, FOLLOW_NEWLINE_in_model65);

                        }

                    }
                    break;
                    case 4:
                        // com\\googlecode\\rockit\\parser\\Model.g:40:4: (pre= predicateDefinition )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:40:4: (pre= predicateDefinition
                        // )
                        // com\\googlecode\\rockit\\parser\\Model.g:40:5: pre= predicateDefinition
                        {
                            pushFollow(FOLLOW_predicateDefinition_in_model76);
                            pre = predicateDefinition();

                            state._fsp--;

                            model.addPredicate(pre);

                        }

                    }
                    break;
                    case 5:
                        // com\\googlecode\\rockit\\parser\\Model.g:41:4: (sf= softFormulaDefinition )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:41:4: (sf= softFormulaDefinition
                        // )
                        // com\\googlecode\\rockit\\parser\\Model.g:41:5: sf= softFormulaDefinition
                        {
                            pushFollow(FOLLOW_softFormulaDefinition_in_model88);
                            sf = softFormulaDefinition();

                            state._fsp--;

                            FormulaSoft formula = sf;
                            if (formula.getRestrictions().size() == 0) {
                                // drop formula
                            } else {
                                model.addFormula(formula);
                            }

                        }

                    }
                    break;
                    case 6:
                        // com\\googlecode\\rockit\\parser\\Model.g:48:4: (hf= hardFormulaDefinition )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:48:4: (hf= hardFormulaDefinition
                        // )
                        // com\\googlecode\\rockit\\parser\\Model.g:48:5: hf= hardFormulaDefinition
                        {
                            pushFollow(FOLLOW_hardFormulaDefinition_in_model100);
                            hf = hardFormulaDefinition();

                            state._fsp--;

                            FormulaHard formula = hf;
                            if (formula.getRestrictions().size() == 0) {
                                // drop formula
                            } else {
                                model.addFormula(formula);
                            }

                        }

                    }
                    break;
                    case 7:
                        // com\\googlecode\\rockit\\parser\\Model.g:55:4: (cf=
                        // cardinalityFormulaDefiniton )
                    {
                        // com\\googlecode\\rockit\\parser\\Model.g:55:4: (cf=
                        // cardinalityFormulaDefiniton )
                        // com\\googlecode\\rockit\\parser\\Model.g:55:5: cf=
                        // cardinalityFormulaDefiniton
                        {
                            pushFollow(FOLLOW_cardinalityFormulaDefiniton_in_model112);
                            cf = cardinalityFormulaDefiniton();

                            state._fsp--;

                            FormulaCardinality formula = cf;
                            if (formula.getRestrictions().size() == 0) {
                                // drop formula
                            } else {
                                model.addFormula(formula);
                            }

                        }

                    }
                    break;

                    default:
                        if (cnt1 >= 1) {
                            break loop1;
                        }
                        EarlyExitException eee =
                                new EarlyExitException(1, input);
                        throw eee;
                    }
                    cnt1++;
                } while (true);

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }

        finally {
            // do for sure before leaving
        }
        return model;
    }

    // $ANTLR end "model"

    // $ANTLR start "softFormulaDefinition"
    // com\\googlecode\\rockit\\parser\\Model.g:70:1: softFormulaDefinition returns [FormulaSoft
    // formula] : ( (f= FLOAT ) | (dv= ID ':' ) ) formulaHard= formulaBodyDefinition ;
    public final FormulaSoft softFormulaDefinition() throws RecognitionException, ParseException {
        FormulaSoft formula = null;

        Token f = null;
        Token dv = null;
        FormulaHard formulaHard = null;

        try {
            // com\\googlecode\\rockit\\parser\\Model.g:70:74: ( ( (f= FLOAT ) | (dv= ID ':' ) )
            // formulaHard= formulaBodyDefinition )
            // com\\googlecode\\rockit\\parser\\Model.g:71:5: ( (f= FLOAT ) | (dv= ID ':' ) )
            // formulaHard= formulaBodyDefinition
            {

                Double w = null;
                VariableDouble doubleVariable = null;

                // com\\googlecode\\rockit\\parser\\Model.g:75:5: ( (f= FLOAT ) | (dv= ID ':' ) )
                int alt2 = 2;
                switch (input.LA(1)) {
                case FLOAT: {
                    alt2 = 1;
                }
                break;
                case ID: {
                    alt2 = 2;
                }
                break;
                default:
                    NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                    throw nvae;

                }

                switch (alt2) {
                case 1:
                    // com\\googlecode\\rockit\\parser\\Model.g:75:6: (f= FLOAT )
                {
                    // com\\googlecode\\rockit\\parser\\Model.g:75:6: (f= FLOAT )
                    // com\\googlecode\\rockit\\parser\\Model.g:75:7: f= FLOAT
                    {
                        f = (Token) match(input, FLOAT, FOLLOW_FLOAT_in_softFormulaDefinition164);

                    }

                    if (f != null) {
                        w = Double.parseDouble(f.getText());
                    }

                }
                    break;
                case 2:
                    // com\\googlecode\\rockit\\parser\\Model.g:80:7: (dv= ID ':' )
                {
                    // com\\googlecode\\rockit\\parser\\Model.g:80:7: (dv= ID ':' )
                    // com\\googlecode\\rockit\\parser\\Model.g:80:8: dv= ID ':'
                    {
                        dv = (Token) match(input, ID, FOLLOW_ID_in_softFormulaDefinition177);

                        match(input, 19, FOLLOW_19_in_softFormulaDefinition179);

                    }

                    if (dv != null) {
                        doubleVariable = new VariableDouble(dv.getText());
                    }

                }
                    break;

                }

                String name = "f" + formulaId;
                formula = new FormulaSoft();
                formula.setName(name);
                formulaId++;
                if (w != null) {
                    formula.setWeight(w);
                }
                if (doubleVariable != null) {
                    formula.setDoubleVariable(doubleVariable);
                }

                pushFollow(FOLLOW_formulaBodyDefinition_in_softFormulaDefinition191);
                formulaHard = formulaBodyDefinition();

                state._fsp--;

                formula.setForVariables(formulaHard.getForVariables());
                formula.setIfExpressions(formulaHard.getIfExpressions());
                formula.setRestrictions(formulaHard.getRestrictions());
                if (formulaHard.isConjunction()) {
                    formula.setConjunction();
                }
                if (formulaHard.isDisjunction()) {
                    formula.setDisjunction();
                }

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }

        finally {
            // do for sure before leaving
        }
        return formula;
    }

    // $ANTLR end "softFormulaDefinition"

    // $ANTLR start "hardFormulaDefinition"
    // com\\googlecode\\rockit\\parser\\Model.g:105:1: hardFormulaDefinition returns [FormulaHard
    // formula] : formulaHard= formulaBodyDefinition '.' ;
    public final FormulaHard hardFormulaDefinition() throws RecognitionException, ParseException {
        FormulaHard formula = null;

        FormulaHard formulaHard = null;

        try {
            // com\\googlecode\\rockit\\parser\\Model.g:105:74: (formulaHard= formulaBodyDefinition
            // '.' )
            // com\\googlecode\\rockit\\parser\\Model.g:106:5: formulaHard= formulaBodyDefinition
            // '.'
            {
                pushFollow(FOLLOW_formulaBodyDefinition_in_hardFormulaDefinition230);
                formulaHard = formulaBodyDefinition();

                state._fsp--;

                formula = formulaHard;

                match(input, 18, FOLLOW_18_in_hardFormulaDefinition242);

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }

        finally {
            // do for sure before leaving
        }
        return formula;
    }

    // $ANTLR end "hardFormulaDefinition"

    // $ANTLR start "cardinalityFormulaDefiniton"
    // com\\googlecode\\rockit\\parser\\Model.g:119:1: cardinalityFormulaDefiniton returns
    // [FormulaCardinality formula] : ( '|' (var1= ID ) ( ',' (var2= ID ) )* '|' ) hardFormula=
    // formulaBodyDefinition (operator= ( '<=' | '>=' ) ) (cardinality= FLOAT ) ;
    public final FormulaCardinality cardinalityFormulaDefiniton() throws RecognitionException,
    ParseException {
        FormulaCardinality formula = null;

        Token var1 = null;
        Token var2 = null;
        Token operator = null;
        Token cardinality = null;
        FormulaHard hardFormula = null;

        try {
            // com\\googlecode\\rockit\\parser\\Model.g:119:87: ( ( '|' (var1= ID ) ( ',' (var2= ID
            // ) )* '|' ) hardFormula= formulaBodyDefinition (operator= ( '<=' | '>=' ) )
            // (cardinality= FLOAT ) )
            // com\\googlecode\\rockit\\parser\\Model.g:121:5: ( '|' (var1= ID ) ( ',' (var2= ID )
            // )* '|' ) hardFormula= formulaBodyDefinition (operator= ( '<=' | '>=' ) )
            // (cardinality= FLOAT )
            {

                HashSet<VariableType> preliminaryOverVariables = new HashSet<VariableType>();

                // com\\googlecode\\rockit\\parser\\Model.g:124:5: ( '|' (var1= ID ) ( ',' (var2= ID
                // ) )* '|' )
                // com\\googlecode\\rockit\\parser\\Model.g:124:6: '|' (var1= ID ) ( ',' (var2= ID )
                // )* '|'
                {
                    match(input, 23, FOLLOW_23_in_cardinalityFormulaDefiniton284);

                    // com\\googlecode\\rockit\\parser\\Model.g:124:10: (var1= ID )
                    // com\\googlecode\\rockit\\parser\\Model.g:124:11: var1= ID
                    {
                        var1 = (Token) match(input, ID, FOLLOW_ID_in_cardinalityFormulaDefiniton289);

                    }

                    if (var1 != null) {
                        preliminaryOverVariables.add(new VariableType(var1.getText()));
                    }

                    // com\\googlecode\\rockit\\parser\\Model.g:129:5: ( ',' (var2= ID ) )*
                    loop3: do {
                        int alt3 = 2;
                        switch (input.LA(1)) {
                        case COMMA: {
                            alt3 = 1;
                        }
                        break;

                        }

                        switch (alt3) {
                        case 1:
                            // com\\googlecode\\rockit\\parser\\Model.g:129:6: ',' (var2= ID )
                        {
                            match(input, COMMA, FOLLOW_COMMA_in_cardinalityFormulaDefiniton298);

                            // com\\googlecode\\rockit\\parser\\Model.g:129:10: (var2= ID )
                            // com\\googlecode\\rockit\\parser\\Model.g:129:11: var2= ID
                            {
                                var2 = (Token) match(input, ID,
                                        FOLLOW_ID_in_cardinalityFormulaDefiniton303);

                            }

                            if (var2 != null) {
                                preliminaryOverVariables.add(new VariableType(var2.getText()));
                            }

                        }
                        break;

                        default:
                            break loop3;
                        }
                    } while (true);

                    match(input, 23, FOLLOW_23_in_cardinalityFormulaDefiniton314);

                }

                pushFollow(FOLLOW_formulaBodyDefinition_in_cardinalityFormulaDefiniton323);
                hardFormula = formulaBodyDefinition();

                state._fsp--;

                // if we have a cardinality formula, we need to figure out if the preliminary over
                // variables
                // exist in the for variables of the formula.
                HashSet<VariableType> forVariables = hardFormula.getForVariables();
                HashSet<VariableType> overVariables = new HashSet<VariableType>();
                for (VariableType search : preliminaryOverVariables) {
                    boolean found = false;
                    for (VariableType var : forVariables) {
                        if (search.getName().equals(var.getName())) {
                            overVariables.add(var);
                            found = true;
                        }
                    }
                    if (!found) {
                        throw new ParseException(
                                "Over-variable "
                                        + search
                                        + " could not be found in the formula body of the following formula: "
                                        + formula.toString()
                                        + " Every over variable has to occur in the formula body.");
                    }
                }

                // com\\googlecode\\rockit\\parser\\Model.g:155:5: (operator= ( '<=' | '>=' ) )
                // com\\googlecode\\rockit\\parser\\Model.g:155:6: operator= ( '<=' | '>=' )
                {
                    operator = input.LT(1);

                    if (input.LA(1) >= 20 && input.LA(1) <= 21) {
                        input.consume();
                        state.errorRecovery = false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null, input);
                        throw mse;
                    }

                }

                // com\\googlecode\\rockit\\parser\\Model.g:155:28: (cardinality= FLOAT )
                // com\\googlecode\\rockit\\parser\\Model.g:155:29: cardinality= FLOAT
                {
                    cardinality = (Token) match(input, FLOAT,
                            FOLLOW_FLOAT_in_cardinalityFormulaDefiniton353);

                }

                int card = Integer.parseInt(cardinality.getText());
                boolean lessEqual = true;
                if (operator.getText().equals(">=")) {
                    lessEqual = false;
                }
                // now we have all information to create the cardinalityformula
                formula = new FormulaCardinality(hardFormula.getName(),
                        hardFormula.getForVariables(), hardFormula.getIfExpressions(),
                        overVariables, hardFormula.getRestrictions(), card, lessEqual);

            }

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }

        finally {
            // do for sure before leaving
        }
        return formula;
    }

    // $ANTLR end "cardinalityFormulaDefiniton"

    // $ANTLR start "formulaBodyDefinition"
    // com\\googlecode\\rockit\\parser\\Model.g:171:1: formulaBodyDefinition returns [FormulaHard
    // formula] : e1= expressionDefinition ( 'v' e2= expressionDefinition )* ;
    public final FormulaHard formulaBodyDefinition() throws RecognitionException, ParseException {
        FormulaHard formula = null;

        ArrayList<IfExpression> e1 = null;

        ArrayList<IfExpression> e2 = null;

        try {
            // com\\googlecode\\rockit\\parser\\Model.g:171:74: (e1= expressionDefinition ( 'v' e2=
            // expressionDefinition )* )
            // com\\googlecode\\rockit\\parser\\Model.g:172:5: e1= expressionDefinition ( 'v' e2=
            // expressionDefinition )*
            {
                pushFollow(FOLLOW_expressionDefinition_in_formulaBodyDefinition388);
                e1 = expressionDefinition();

                state._fsp--;

                String name = "f" + formulaId;
                formula = new FormulaHard();
                formula.setName(name);
                formulaId++;

                for (IfExpression ifExpr : e1) {
                    if (ifExpr instanceof PredicateExpression) {
                        PredicateExpression expr = (PredicateExpression) ifExpr;
                        if (expr.getPredicate().isObserved()) {
                            expr.setPositive(!expr.isPositive());
                            formula.addIfExpression(expr);
                        } else {
                            formula.addRestriction(expr);
                        }
                    } else {
                        formula.addIfExpression(ifExpr);
                    }
                }

                // com\\googlecode\\rockit\\parser\\Model.g:192:5: ( 'v' e2= expressionDefinition )*
                loop4: do {
                    int alt4 = 2;
                    switch (input.LA(1)) {
                    case 22: {
                        alt4 = 1;
                    }
                    break;

                    }

                    switch (alt4) {
